--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -1,10 +1,6 @@
 {
   "mookinator": {
     "title": "Mookinator",
-    "description": "Gerador avançado de Mooks para Foundry VTT",
-    "notifications": {
-      "loaded": "Mookinator carregado com sucesso!",
-      "error": "Erro no Mookinator"
-    }
+    "description": "Gerador avançado de Mooks para GURPS"
   }
 }
